--- a/ot.html
+++ b/ot.html
@@ -12,10 +12,10 @@
   <div class="container">
     <h1>A Working Man (2025)</h1>
     <div class="button-container">
-      <button class="btn" onclick="location.href='https://ozhnjz.github.io/1/ot1'">
+      <button class="btn" onclick="location.href='https://qfdyshby.github.io/1/ot1'">
         PART 1
       </button>
-      <button class="btn" onclick="location.href='https://ozhnjz.github.io/1/ot2'">
+      <button class="btn" onclick="location.href='https://qfdyshby.github.io/1/ot2'">
         PART 2
       </button>
     </div>
