--- a/ot1.html
+++ b/ot1.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <div class="video-container">
-        <iframe src="https://player.vimeo.com/video/1075925292?h=30a5687a0d&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" title="mp4"></iframe>
+        <iframe 
+            src="https://player.vimeo.com/video/1075925292?dnt=1&h=30a5687a0d&badge=0&autopause=0&player_id=0&app_id=58479"
+            frameborder="0"
+            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"
+            title="mp4">
+        </iframe>
     </div>
-
     <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
 </html>
