--- a/k.html
+++ b/k.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Nishaanchi (2025)</title>
+    <title>Kesari Chapter 2 (2025)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="z/play.png" />
     <link
@@ -50,4 +50,5 @@
     <footer>This webpage will be deleted on 30-November-2025</footer>
     <script src="z/movie.js"></script>
   </body>
+
 </html>
